--- a/src/app/views/website/register.njk
+++ b/src/app/views/website/register.njk
@@ -11,6 +11,10 @@
                     <input type="text">
                 </div>
                 <div class="item">
+                    <label for="">Imagem do estabeleciento:</label>
+                    <input type="url" name="img_url">
+                </div>
+                <div class="item">
                     <label for="">Telefone:</label>
                     <input type="text">
                 </div>
