--- a/src/app/views/website/index.njk
+++ b/src/app/views/website/index.njk
@@ -41,7 +41,7 @@
 {% block main %}
     <div class="indexMain">
         <div class="search">
-            <input type="text" name="" id="">
+            <input type="text" name="search" id="">
             <button class="searchBtn">
                 <img src="assets/search.svg" alt="">
             </button>
