--- a/src/app/views/website/index.njk
+++ b/src/app/views/website/index.njk
@@ -2,50 +2,45 @@
 
 {% block aside %}
     <div class="indexAside">
-        <ul>
-            <li>
+        <div class="categories">
+            <div class="categorie">
                 <p>Pizzaria</p>
                 <span hidden="true">
                     <img src="assets/pizza.svg" alt="pizzaria">
                 </span>
-            </li>
-            <li>
+            </div>
+            <div class="categorie">
                 <p>Restaurante
                 </p>
                 <span hidden="true">
                     <img src="assets/restaurant.svg" alt="restaurante">
                 </span>
-            </li>
-            <li>
+            </div>
+            <div class="categorie">
                 <p>Sorveteria / Açaiteria</p>
                 <span hidden="true">
                     <img src="assets/ice-cream.svg" alt="sorveteria">
                 </span>
-            </li>
-            <li>
+            </div>
+            <div class="categorie">
                 <p>Churrascaria</p>
                 <span hidden="true">
                     <img src="assets/barbecue.svg" alt="churrascaria">
                 </span>
-            </li>
-            <li>
+            </div>
+            <div class="categorie">
                 <p>Bar</p>
                 <span hidden="true">
                     <img src="assets/drinks.svg" alt="bar">
                 </span>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
 {% endblock aside %}
 
 {% block main %}
     <div class="indexMain">
-        <div class="search">
-            <input type="text" name="search" id="">
-            <button class="searchBtn">
-                <img src="assets/search.svg" alt="">
-            </button>
-        </div>
+        
         <div class="content">
             <div class="cards">
                 <div class="card">
