--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,16 +11,31 @@
   appearance: none;
 }
 
-textarea:focus, input:focus, select:focus, button:focus {
+textarea:focus,
+input:focus,
+select:focus,
+button:focus {
   box-shadow: 0 0 0 0;
   border: 0 none;
   outline: 0;
-} 
+}
 
 body {
   background-color: #f2e5d5;
   font-family: "Open Sans", sans-serif;
   min-height: 300px;
+}
+
+aside {
+  grid-area: aside;
+  margin: 0;
+  margin-top: 50px;
+}
+
+main {
+  grid-area: main;
+  width: 100%;
+  min-height: 200px;
 }
 
 .container {
@@ -39,70 +54,48 @@ body {
   justify-content: space-between;
 }
 
-.header .home a {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 5px;
-}
-
-.header .home p {
-  font-size: 24px;
-  font-weight: bold;
-  color: #111111;
-  text-align: center;
-}
-
 .header a img {
-  width: 50px;
-  height: 50px;
+  width: 200px;
   align-self: center;
   justify-self: center;
 }
 
-.header .links a {
-  font-size: 36px;
-  text-decoration: none;
-  transition: 300ms;
-  
+.header .register-login {
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header .register-login .register a {
   color: #111111;
-  margin-left: 20px;
+  margin-right: 50px;
 }
 
-.header .links a:hover {
-  font-weight: bold;
-  color: #f26363;
+.header .register-login .register a:hover{
+  text-decoration: underline;
 }
 
-.header .login button {
+.header .login a {
   background-color: #26a677;
   font-size: 16px;
-  width: 150px;
-  height: 30px;
-  border-radius: 20px;
+  font-weight: bold;
+  width: 90px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #ffffff;
+  transition: 400ms;
 }
 
-.header .login button:hover {
+.header .login a:hover {
   background-color: #16e79b;
+  color: #111111;
   cursor: pointer;
 }
 
-aside {
-  grid-area: aside;
-  margin: 0;
-  margin-top: 50px;
-}
-
-main {
-  grid-area: main;
-  width: 100%;
-  min-height: 200px;
-  margin-top: 20px;
-}
-
+/* 
 footer {
   position: fixed;
   bottom: 0;
@@ -110,88 +103,89 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #F26363;
+  background-color: #f26363;
 }
 
-footer p{
+footer p {
   font-size: 16px;
   margin: 10px auto;
-}
+} */
 
 /* == INDEX== */
 
-.indexAside ul {
+.indexAside .categories{
   list-style: none;
+  background-color: white;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.indexAside ul li {
+.indexAside .categories .categorie {
   width: 100%;
   padding: 10px;
-  margin: 10px 0;
   background-color: #ffffff;
-  border-radius: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-weight: bold;
-  transition: 400ms;
+  transition: 300ms;
 }
 
-.indexAside ul li.active {
-  width: 100%;
+.indexAside .categories .categorie.active {
+  width: 115%;
   padding: 10px;
-  margin: 20px 0;
-  background-color: #F2B05E;
+  background-color: #F04A58;
+  opacity: 1;
   cursor: pointer;
-  border: 1px solid #26A677;
   color: #ffffff;
 }
 
-.indexAside ul li span img {
+.indexAside .categories .categorie span img {
   width: 50px;
 }
 
-.indexMain{
+.indexMain {
   margin-top: 50px;
 }
 
-.indexMain .search {
+.container .search {
+  width: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: 400ms;
 }
 
-.indexMain .search input{
+.container .search input {
   width: 100%;
   height: 60px;
   margin-left: 30px;
-  border: 2px solid #26A677;
   border-right: 0;
-  border-radius: 6px 0 0 6px;
   font-size: 24px;
   padding: 10px;
-  color: #593232;
   transition: 500ms;
 }
 
+.container .search:focus-within {
+  width: 55%;
+}
 
-.indexMain .search .searchBtn{
+.container .search .searchBtn {
   width: 60px;
   height: 60px;
   margin-right: 30px;
   background-color: #ffffff;
-  border: 2px solid #26A677;
-  border-radius: 0 6px 6px 0;
 }
 
-.indexMain .search .searchBtn:hover{
-
-  background-color: #76ff9f;
+.container .search .searchBtn:hover {
+  cursor: pointer;
 }
 
-.indexMain .search button img{
+.container .search button img {
   width: 20px;
-  color: #ffffff;
 }
 
 
@@ -200,14 +194,13 @@ footer p{
 .cards {
   width: 940px;
   min-height: 300px;
-  background-color: #f2636375;
+  background-color: #F04A58;
   margin: 50px auto;
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
   padding: 24px;
-  border-radius: 20px;
 }
 .cards .card {
   width: 200px;
@@ -223,7 +216,6 @@ footer p{
   height: 150px;
   align-self: center;
   border-radius: 50%;
-  border: 5px solid #248b6c;
 }
 
 .card img {
@@ -231,7 +223,7 @@ footer p{
   height: 100%;
   border-radius: 50%;
 }
-.card .infos{
+.card .infos {
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -241,36 +233,30 @@ footer p{
   bottom: 20px;
 }
 
-
-.card .infos h2{
+.card .infos h2 {
   width: 150px;
   background-color: #ffffff;
-  border-radius: 8px;
   font-size: 18px;
   text-align: center;
-  border: 1px solid #cccccc;
 }
 
-.card .infos p{
+.card .infos p {
   width: 100px;
   background-color: #ffffff;
-  border-radius: 8px;
   font-size: 14px;
   text-align: center;
-  border: 1px solid #cccccc;
 }
-
 /* == Formulário == */
 
-.registerMain{
+.registerMain {
   width: 700px;
   padding: 8px 16px;
   margin: 0 auto;
-  background-color:#f110101c;
+  background-color: #f110101c;
   margin-top: 50px;
 }
 
-legend{
+legend {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -279,7 +265,7 @@ legend{
 fieldset {
   margin-top: 30px;
 }
-.field-group{
+.field-group {
   display: grid;
   grid-template-columns: 1fr;
   margin: 20px auto;
@@ -288,7 +274,7 @@ fieldset {
 .field {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-evenly;
   margin-bottom: 16px;
 }
 
@@ -305,7 +291,7 @@ fieldset {
   box-shadow: 2px 2px 2px -2px rgba(60, 60, 60, 0.8);
 }
 
-.field select{
+.field select {
   width: 50%;
   padding: 10px;
   background-color: #fdfdfd;
@@ -313,28 +299,18 @@ fieldset {
   box-shadow: 2px 2px 2px -2px rgba(60, 60, 60, 0.8);
 }
 
-button {
+form .button {
   width: 100%;
   height: 60px;
-  background-color: #1fa535;
+  background-color: #26a677;
   color: #ffffff;
   font-size: 24px;
+  font-weight: bold;
   margin-top: 50px;
-  border-radius: 8px;
 }
 
-.ad {
-  width: 200px;
-  height: 500px;
-  margin-top: 50px;
-  background-color: #361d1a;
-  display: flex;
-}
-
-p {
-  display: flex;
-  font-size: 64px;
-  text-align: center;
-  margin: auto;
-  color: #ffffff;
+form .button:hover {
+  background-color: #16e79b;
+  color: #111111;
+  cursor: pointer;
 }
