--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -252,8 +252,14 @@ footer p {
   width: 700px;
   padding: 8px 16px;
   margin: 0 auto;
-  background-color: #f110101c;
+  background-color: #F04A58;
   margin-top: 50px;
+}
+
+.registerMain h1,
+.registerMain h2,
+.registerMain h3 {
+  color: #fdfdfd;
 }
 
 legend {
@@ -280,10 +286,10 @@ fieldset {
 
 .field label {
   font-size: 18px;
-  color: #361d1a;
+  color: #fdfdfd;
 }
 
-.field input {
+.field .input {
   width: 100%;
   height: 30px;
   padding: 5px;
@@ -297,6 +303,15 @@ fieldset {
   background-color: #fdfdfd;
   color: #666666;
   box-shadow: 2px 2px 2px -2px rgba(60, 60, 60, 0.8);
+}
+
+.field-group .field.delivery {
+  display: flex;
+  justify-content: center;
+}
+
+.field-group .field.delivery input{
+  appearance: radio;
 }
 
 form .button {
