--- a/src/app/views/website/index.njk
+++ b/src/app/views/website/index.njk
@@ -43,60 +43,17 @@
         
         <div class="content">
             <div class="cards">
-                <div class="card">
-                    <div class="img">
-                        <img src="assets\labellapizza.jpg" alt="">
+                {% for establishment in establishments %}
+                    <div class="card">
+                        <div class="img">
+                            <img src="{{establishment.image_url}}" alt="{{establishment.image_url}}">
+                        </div>
+                        <div class="infos">
+                            <h2>{{establishment.name}}</h2>
+                            <p>{{category.name}}</p>
+                        </div>
                     </div>
-                    <div class="infos">
-                        <h2>La Bella Pizza</h2>
-                        <p>Pizzaria</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="infos">
-                        <h2>Nome</h2>
-                        <p>Tipo</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="infos">
-                        <h2>Nome</h2>
-                        <p>Tipo</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="infos">
-                        <h2>Nome</h2>
-                        <p>Tipo</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="infos">
-                        <h2>Nome</h2>
-                        <p>Tipo</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="infos">
-                        <h2>Nome</h2>
-                        <p>Tipo</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
