--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles/styles.css">
-        <link rel="icon" href="/assets/pizza.svg">
+        <link rel="icon" href="/assets/buxinxeiSymbol.svg">
 
         <title>Buxin Xei</title>
     </head>
@@ -40,6 +40,8 @@
                 {% block main %}{% endblock main %}
             </main>
         </div>
+
+        {% block modal %}{% endblock modal %}
 
         <script src="scripts/script.js"></script>
     </body>
