--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -132,6 +132,7 @@ footer p {
   justify-content: space-between;
   font-weight: bold;
   transition: 300ms;
+  color: #111111;
 }
 
 .indexAside .categories .categorie.active {
@@ -201,6 +202,7 @@ footer p {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
   padding: 24px;
+  /* border-radius: 100px; */
 }
 .cards .card {
   width: 200px;
@@ -217,6 +219,10 @@ footer p {
   align-self: center;
   border-radius: 50%;
 }
+
+/* .card .img:hover {
+  box-shadow: 0px 0px 17px 2px rgb(214, 218, 23);
+} */
 
 .card img {
   width: 100%;
